--- a/web/app/views/feeds/index.html.erb
+++ b/web/app/views/feeds/index.html.erb
@@ -68,8 +68,8 @@
       <div class="me-section__inner">
         <%= render partial: 'saves',
                    locals:  {
-                       identifier:   'salvos',
-                       saved_events: @favorited_events
+                       identifier:   'events_saved',
+                       saved_resources: @favorited_events
                    } %>
       </div>
     </section>
