--- a/web/app/views/feeds/_saves.html.erb
+++ b/web/app/views/feeds/_saves.html.erb
@@ -4,8 +4,8 @@
 
 %>
 
-<% if current_user and saved_events.present? %>
-  <div id="saves" class="me-saves" data-controller="saves" data-target="saves.saves" data-observable="float-menu.section">
+<% if current_user and saved_resources.present? %>
+  <div id="<%= identifier %>" class="me-saves" data-controller="saves" data-target="saves.saves" data-observable="float-menu.section">
     <h2 data-target="saves.header" class="me-saves__title">
       Favoritos
       <%= link_to user_path current_user do %>
@@ -39,47 +39,27 @@
     <div class="me-saves__list mdc-layout-grid"
          data-target="saves.list">
       <div class="mdc-layout-grid__inner">
-        <% saved_events.each do |event| %>
-          <div class="mdc-layout-grid__cell">
-            <div class="me-card mdc-card me-card--saves event-<%= event.id %>"
-                 data-action="mouseover->saves-events#showEventDetails"
-                 data-controller="saves-events"
-                 data-saves-events-identifier="<%= event.id %>"
-                 data-saves-flip-key="<%= "saves-#{dom_id event}" %>"
-                 data-target="saves-events.event">
-              <div class="me-card__remove"
-                   data-action="click->saves-events#remove"
-                   data-target="saves-events.remove">
-                <svg viewBox="0 0 100 100" preserveAspectRatio="xMidYMid meet" focusable="false">
-                  <path
-                    d="m55.7 52.7c6.2 6.7 12.4 13.5 18.6 20.2 2.2 2.4-1.4 5.9-3.5 3.5-6.2-6.7-12.3-13.4-18.5-20.1-6.1 6.8-12.3 13.4-18.4 20.1-2.2 2.4-5.7-1.2-3.5-3.5 6.2-6.7 12.4-13.5 18.6-20.2-6.2-6.7-12.4-13.5-18.6-20.2-2.2-2.4 1.4-5.9 3.5-3.5 6.1 6.6 12.3 13.3 18.4 20 6.2-6.7 12.3-13.4 18.5-20.1 2.2-2.4 5.7 1.2 3.5 3.5-6.2 6.8-12.4 13.5-18.6 20.3z"></path>
-                </svg>
-              </div>
-              <a href="<%= event.url %>"
-                 title="<%= event.details_name %>">
-                <div class="mdc-card__media mdc-card__media--16-9"
-                     style="<%= get_image_style_attr event, preload: false %>">
-                  <%= image_tag get_feed_image_url(event), loading: :lazy %>
-                  <div class="me-card__overlay"
-                       data-target="saves-events.overlay"
-                       data-action="click->saves-events#animateOnClick"></div>
-                </div>
-                <div class="me-card__date <%= event.day_of_week['decorator'].parameterize %>" data-target="saves-events.date">
-                  <span><i></i> <%= event.day_of_week['decorator'] %> <%= format_hour event.first_day_time %></span>
-                  <span class="me-card__date-distance-in-words">
-                    <%= event.first_day_time > DateTime.now ? "Daqui #{distance_of_time_in_words event.first_day_time, DateTime.now}" : "Iniciou há #{distance_of_time_in_words event.first_day_time, DateTime.now}" %>
-                  </span>
-                </div>
-              </a>
-            </div>
-          </div>
+        <% if identifier == 'movies_saved' %>
+          <%= render(partial: 'components/collection/movie',
+                    collection: saved_resources,
+                    as:         :movie,
+                    cached:     true) %>
+        <% else %>
+        <%= render(partial: 'components/collection/event',
+                  collection: saved_resources,
+                  as:         :event,
+                  locals:     {
+                    display_name:    false,
+                    display_place:   false,
+                    display_similar: false
+                  },
+                  cached:     true) %>
         <% end %>
       </div>
     </div>
   </div>
-
 <% else %>
-  <div id="saves" class="me-saves me-saves--empty">
+  <div id="<%= identifier %>" class="me-saves me-saves--empty">
     <h2 class="me-saves__title">
       Salve eventos com ❤ para vê-los aqui
     </h2>
