--- a/web/app/assets/stylesheets/components/me-section.scss
+++ b/web/app/assets/stylesheets/components/me-section.scss
@@ -15,8 +15,8 @@
   }
   @include mobile-only {
     max-width: unset;
-    padding: 24px 0;
-    margin: 3px auto;
+    padding: 18px 0;
+    margin: 0 auto;
     // box-shadow: 0px 1px 0px #a0a0a029;
     //border-bottom: 5px solid $surface-tertiary-color;
   }
