--- a/web/app/views/events/show.html.erb
+++ b/web/app/views/events/show.html.erb
@@ -134,25 +134,32 @@
 
         <div class="me-event-single__head">
           <% if current_user %>
-          <div class="me-event-single__like-button" data-action="click->event#like">
-            <div data-target="event.like">
-              <button data-target="event.likeButton" id="add-to-favorites"
-              class="me-icon-button mdc-icon-button <%= 'mdc-icon-button--on' if current_user.taste_events_saved?(@event.id) %>"
-              aria-label="Add to favorites" aria-hidden="true" aria-pressed="false">
-              <i class="material-icons mdc-icon-button__icon mdc-icon-button__icon--on">
-                <svg width="18" height="16" viewBox="0 0 18 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-                  <path d="M9.99165 15.4562C9.33798 16.0496 8.33168 16.0496 7.67801 15.4476L7.5834 15.3616C3.06793 11.2761 0.117822 8.60127 0.229634 5.26412C0.281239 3.80197 1.02952 2.40003 2.24224 1.57434C4.51288 0.0261801 7.31677 0.748655 8.83053 2.52044C10.3443 0.748655 13.1482 0.0175793 15.4188 1.57434C16.6315 2.40003 17.3798 3.80197 17.4314 5.26412C17.5518 8.60127 14.5931 11.2762 10.0777 15.3788L9.99165 15.4562Z"/>
-                </svg>
-              </i>
-              <i class="material-icons-sharp mdc-icon-button__icon">
-                <svg width="18" height="16" viewBox="0 0 18 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-                  <path d="M9.99165 15.4562C9.33798 16.0496 8.33168 16.0496 7.67801 15.4476L7.5834 15.3616C3.06793 11.2761 0.117822 8.60127 0.229634 5.26412C0.281239 3.80197 1.02952 2.40003 2.24224 1.57434C4.51288 0.0261801 7.31677 0.748655 8.83053 2.52044C10.3443 0.748655 13.1482 0.0175793 15.4188 1.57434C16.6315 2.40003 17.3798 3.80197 17.4314 5.26412C17.5518 8.60127 14.5931 11.2762 10.0777 15.3788L9.99165 15.4562Z"/>
-                </svg>
-              </i>
-            </button>
-          </div>
-        </div>
-        <% end %>
+            <div data-controller="save-button"
+                data-action="click->save-button#like"
+                data-save-button-resource-name="<%= @event.class.name.tableize %>"
+                data-save-button-resource-id="<%= @event.id %>"
+                data-save-button-saved="<%= current_user.taste_events_saved? @event.id %>"
+                class="me-card__like-button">
+                <button data-target="save-button.saveButton"
+                        id="add-to-favorites"
+                        class="me-icon-button mdc-icon-button <%= 'mdc-icon-button--on' if current_user.taste_events_saved?(@event.id) %>"
+                        aria-label="Add to favorites"
+                        aria-hidden="true"
+                        aria-pressed="false"
+                        style="<%= 'display: inline' if current_user.taste_events_saved?(@event.id) %>">
+                  <i class="material-icons mdc-icon-button__icon mdc-icon-button__icon--on">
+                    <svg width="18" height="16" viewBox="0 0 18 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path d="M9.99165 15.4562C9.33798 16.0496 8.33168 16.0496 7.67801 15.4476L7.5834 15.3616C3.06793 11.2761 0.117822 8.60127 0.229634 5.26412C0.281239 3.80197 1.02952 2.40003 2.24224 1.57434C4.51288 0.0261801 7.31677 0.748655 8.83053 2.52044C10.3443 0.748655 13.1482 0.0175793 15.4188 1.57434C16.6315 2.40003 17.3798 3.80197 17.4314 5.26412C17.5518 8.60127 14.5931 11.2762 10.0777 15.3788L9.99165 15.4562Z"/>
+                    </svg>
+                  </i>
+                  <i class="material-icons-sharp mdc-icon-button__icon">
+                    <svg width="18" height="16" viewBox="0 0 18 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path d="M9.99165 15.4562C9.33798 16.0496 8.33168 16.0496 7.67801 15.4476L7.5834 15.3616C3.06793 11.2761 0.117822 8.60127 0.229634 5.26412C0.281239 3.80197 1.02952 2.40003 2.24224 1.57434C4.51288 0.0261801 7.31677 0.748655 8.83053 2.52044C10.3443 0.748655 13.1482 0.0175793 15.4188 1.57434C16.6315 2.40003 17.3798 3.80197 17.4314 5.26412C17.5518 8.60127 14.5931 11.2762 10.0777 15.3788L9.99165 15.4562Z"/>
+                    </svg>
+                  </i>
+                </button>
+            </div>
+          <% end %>
           <div class="me-event-single__media" style="<%= get_image_style_attr @event %>">
             <img src="<%= @event.image[:original].url(public: true) %>" alt="<%= @event.details_name %>">
           </div>
@@ -197,17 +204,6 @@
               </div>
             </div>
           </div>
-<!--          <div class="me-event-single__topics">-->
-            <%#= render partial: 'components/follow/follow-chip-set', locals: { user: current_user, chips: @event.categories.sort, event_id: @event.id, type: 'categories' } %>
-            <%#= render partial: 'components/follow/follow', locals: {
-                data: {
-                    user:     current_user,
-                    chips:    @event.organizers.sort,
-                    event_id: @event.id,
-                    type:     'organizers'
-                }
-            } %>
-<!--          </div>-->
           <div class="me-event-single__description">
             <div class="me-event-single__description-wrapper">
               <%= @event.details_description.html_safe %>
