--- a/web/app/assets/stylesheets/components/me-tab-bar.scss
+++ b/web/app/assets/stylesheets/components/me-tab-bar.scss
@@ -11,9 +11,8 @@
   position: sticky;
   top: 0;
   z-index: 5;
-  box-shadow: 0px 0px 1px 0px #0a0a0a99;
-  will-change: box-shadow;
-  transition: 250ms box-shadow ease;
+  // will-change: box-shadow;
+  // transition: 250ms box-shadow ease;
   // @include mdc-tab-states-color(#ffffff);
   @include desktop-only {
     z-index: 3;
@@ -24,10 +23,6 @@
     @include mdc-tab-bar-density(-1);
     top: 0;
     margin-bottom: 1px;
-  }
-
-  &--with-shadow {
-    box-shadow: 0px 1px 6px 1px #00000030;
   }
 
   & .mdc-tab {
