Update Rails to version 6.0

--- a/web/app/views/layouts/application.html.erb
+++ b/web/app/views/layouts/application.html.erb
@@ -54,7 +54,7 @@
 
   <!-- <script src="https://sdk.pushy.me/web/1.0.5/pushy-sdk.js" defer></script> -->
 
-  <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload', defer: true %>
+  <%#= javascript_include_tag 'application', 'data-turbolinks-track': 'reload', defer: true %>
   <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload', defer: true %>
   <script async src="https://cdn.ampproject.org/v0.js" data-turbolinks-track="reload"></script>
   <script async custom-element="amp-social-share" src="https://cdn.ampproject.org/v0/amp-social-share-0.1.js"></script>
