Adjust empty message to saves component

--- a/web/app/views/feeds/_saves.html.erb
+++ b/web/app/views/feeds/_saves.html.erb
@@ -61,7 +61,7 @@
 <% else %>
   <div id="<%= identifier %>" class="me-saves me-saves--empty">
     <h2 class="me-saves__title">
-      Salve eventos com ❤ para vê-los aqui
+      <%= empty_message %>
     </h2>
     <div class="me-saves__list mdc-layout-grid"
          data-target="saves.list">
