--- a/web/app/views/layouts/application.html.erb
+++ b/web/app/views/layouts/application.html.erb
@@ -32,6 +32,7 @@
 
   <%= csrf_meta_tags %>
   <%= csp_meta_tag %>
+	<%= action_cable_meta_tag %>
 
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
